--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -7,7 +7,7 @@ date: 2020/09/11
 ## はじめに
 このブログはVuePressで作られていますが、この記事を参考にVuePressのサイドバーを右側に移動させていると、スマホでのモバイル表示やウィンドウが狭くなったときの表示が崩れてしまう事に気づきました。Twitterなどにリンクを貼っているため、モバイルからこのブログを閲覧する機会も多いのではないでしょうか。こういった考えもあり、モバイル表示の問題は**可及的速やかに**対処する必要がありました。
 
-## どういった問題だったの？
+## 問題の詳細
 具体的には、サイドバーがブログのページ全体に不自然にかぶっていて記事が見えないという問題でした。ハンバーガーメニューをタップするとサイドバーが中途半端にモバイルの画面右側を覆ってしまう上、記事の本文全体が左に寄っていました。そのため、とても読めたものではなかったです。
 
 ## Styleをいじる
