--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -44,6 +44,9 @@ date: 2020/09/11
 ```
 `mobile.styl`と`index.styl`内の記述を上記のように変更すると、ハンバーガメニューをタップした場合のみ右からサイドバーを出すという挙動にできました。
 
+<blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="ja" dir="ltr">誕生日にブログのモバイル表示を修正ですの〜！ <a href="https://t.co/631XTwJyIh">pic.twitter.com/631XTwJyIh</a></p>&mdash; o-xian(おっしゃん) (@osshan9) <a href="https://twitter.com/osshan9/status/1303730370169376768?ref_src=twsrc%5Etfw">September 9, 2020</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 ## まとめ
 この問題で誕生日前日を一日フルで溶かす事になりましたが、モバイルの表示が綺麗になってとても見やすくなったんじゃないでしょうか。  
 ~~CSSの設計とか当分できなさそうだなと思わせてくれる問題対応でした(こなみ)。~~
