Add nodejs and yarn version

--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -10,6 +10,8 @@ date: 2020/09/11
 ## 開発環境
 - Ubuntu18.04 LTS
 - ThinkPad X250
+- Node.js 10.19.0
+- Yarn 1.22.5
 
 ## 問題の詳細
 具体的には、サイドバーがブログのページ全体に不自然にかぶっていて記事が見えないという問題でした。ハンバーガーメニューをタップするとサイドバーが中途半端にモバイルの画面右側を覆ってしまう上、記事の本文全体が左に寄っていました。そのため、とても読めたものではなかったです。
