Start writing content

--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -5,9 +5,77 @@ date: 2020/09/28
 # Gridsomeで複数ディレクトリから記事一覧を表示する
 
 ## はじめに
-Gridsomeは様々なデータを静的サイトとして表示することができます。今回はサークルのホームページを作成する時にハマった部分の整理も兼ねて、複数のディレクトリ配下にあるマークダウンファイルの一覧を一枚のページに表示する方法を書いていきます。
+[Gridsome](https://gridsome.org/)は様々なデータを静的サイトとして表示することができます。今回はサークルのホームページを作成する時にハマった部分の整理も兼ねて、複数のディレクトリ配下にあるマークダウンファイルの一覧を一枚のページに表示する方法を書いていきます。
 
 ## そもそも
 Gridsomeは[Gatsby](https://www.gatsbyjs.com/)に強くインスパイアされて開発された静的サイトジェネレーターです。GatsbyがReact製であるのに対し、GridsomeはVueで開発されています。仕組みとしては、CMSやマークダウンファイルのデータから、タイトル・日付・本文情報などの記事データをGraphQLで引っ張ってきて、それらをを複数のページで必要に応じて表示します。これらのデータの引っ張り方を理解することで少々複雑な挙動も可能になっていきます。
 
-### マークダウンファイルのデータをGrapgQLデータレイヤーにインポートする
+## マークダウンファイルのデータをGrapgQLデータレイヤーにインポートする
+これから、「ニュース」セクションと「プロダクト」セクションの記事を別々のディレクトリでで管理しながら、一括でデータをインポートしてトップページに表示する作業を行います。
+まず、以下のコマンドを叩いて、手元の環境にGridsomeのDefault starterを作成します。
+```sh
+$ gridsome create sample
+    ❯ Clone https://github.com/gridsome/gridsome-starter-default.git 2.05s
+    ❯ Update project package.json 0.01s
+    ❯ Install dependencies 22.03s
+
+    - Enter directory cd sample
+    - Run gridsome develop to start local development
+    - Run gridsome build to build for production
+```
+おそらく、プロジェクトディレクトリ配下はこのようなファイル構造になっているはずです。
+```
+.
+├── gridsome.config.js
+├── gridsome.server.js
+├── node_modules
+├── package.json
+├── README.md
+├── src
+├── static
+└── yarn.lock
+```
+今回はマークダウンファイルをデータに持っていきたいので、マークダウンファイルをGraphQLデータにインポートできるGridsomeプラグインを導入します。今回は`@gridsome/vue-remark`というプラグインを、以下のコマンドでぶち込みます。今回は`Yarn`を使用しています。
+```sh
+$ yarn add @gridsome/vue-remark
+    yarn add v1.22.5
+    [1/4] Resolving packages...
+    [2/4] Fetching packages...
+    .
+    .
+    .
+    Done in 10.34s.
+```
+上記のように`@gridsome/vue-remark`の導入が終わったら、`gridsome.config.js`に以下のような書き込みを行います。
+```js
+//gridsome.config.js
+module.exports = {
+  siteName: 'Gridsome',
+  plugins: [
+    {
+      use: '@gridsome/vue-remark',
+      options: {
+        typeName: 'NewsPost', // 必須。GraphQL上で扱う型定義
+        baseDir: './posts/news', // 記事となるmarkdownファイルを置くディレクトリ
+        pathPrefix: '/news', // URLになるパス。必須ではない。
+        template: './src/templates/NewsPost.vue' // 記事ページのVueコンポーネントファイルの指定
+      }
+    },
+    {
+      use: '@gridsome/vue-remark',
+      options: {
+        typeName: 'ProductPost', // 必須。GraphQL上で扱う型定義
+        baseDir: './posts/products', // 記事となるmarkdownファイルを置くディレクトリ
+        pathPrefix: '/products', // URLになるパス。必須ではない。
+        template: './src/templates/ProductPost.vue' // 記事ページのVueコンポーネントファイルの指定
+      }
+    }  
+  ]
+}
+```
+これらの書き方は[@gridsome/vue-remarkプラグインの公式サイト](https://gridsome.org/plugins/@gridsome/vue-remark)にしっかりと載っています。ここに載っている書き方の例と比較すると、上記の記述ではいくつか異なる部分が見受けられるはずです。この部分は以下のように解説できます。
+- マークダウンファイルをデータとして利用するには、**マークダウンファイルを入れておくディレクトリがそれぞれのGraphQL上の型1つにつき1つ必要**。
+- そのために「ニュース」と「プロダクト」のそれぞれに対して、**GraphQL上の型・格納するディレクトリ・パス・テンプレートファイル**の指定を行っている。
+- 先程導入したプラグインを、「ニュース」と「プロダクト」のそれぞれに対して適用させている。
+
+## 参考
