--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -78,4 +78,33 @@ module.exports = {
 - そのために「ニュース」と「プロダクト」のそれぞれに対して、**GraphQL上の型・格納するディレクトリ・パス・テンプレートファイル**の指定を行っている。
 - 先程導入したプラグインを、「ニュース」と「プロダクト」のそれぞれに対して適用させている。
 
+この`gridsome.config.js`が、Gridsomeのプロジェクトのデータ設定になるので、ここは非常に重要となります。この設定一つでデータを読み込めなかったりするので、しっかり記述します。  
+
+データの定義が完了したので、次はデータとなるマークダウンファイルを格納するディレクトリを作成します。
+```
+mkdir posts/news
+mkdir posts/products
+```
+2つのディレクトリの中には、以下のような形式でマークダウンファイルを作成します。両方のディレクトリにこの形式のマークダウンファイルがないとエラーを吐きますので、2つともファイルを作成しておきましょう。
+```md
+---
+title: "成功していればここにタイトルが表示されます"
+---
+
+## これは最初の投稿です
+
+マークダウンで記事一覧を表示することかできたぞ!やったぜ!  
+テンションあがるなｧ＾〜
+```
+こうしてマークダウンファイルを作成しました。これらの情報が、先程のプラグインによってGraphQLデータレイヤーにインポートされます。具体的には
+- title: マークダウンファイルで`title`を記述した部分
+- content: 記事本文
+
+の2つに加え、
+- id: 各マークダウンファイルに対応する一意の文字列
+
+の3つの情報がインポートされています。以降は、これらデータレイヤー上のデータを必要に応じてQuery:照会していきます。
+
+## GraphQLデータレイヤー上のデータをクエリ(照会)して、投稿一覧ページを作る
+
 ## 参考
