Write blog post

--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -106,5 +106,108 @@ title: "成功していればここにタイトルが表示されます"
 の3つの情報がインポートされています。以降は、これらデータレイヤー上のデータを必要に応じてQuery:照会していきます。
 
 ## GraphQLデータレイヤー上のデータをクエリ(照会)して、投稿一覧ページを作る
+次に各ページにGraphQLを記述して、データレイヤー上にインポートされたデータから必要なデータを問い合わせていきます。`Index.vue`に記述されているデフォルトの記事に、GraphQLの項目を追記していきます。
+```vue
+<!-- Index.vue -->
+<template>
+<Layout>
+    <h1>Hello, world!</h1>
+    .
+    .
+    .
+    <div>
+      <h1>News</h1>
+      <g-link 
+        v-for="news in $page.allNewsPost.edges"
+        :key="news.node.id" 
+        :to="news.node.path">
+          <h2>{{ news.node.title }}</h2>
+      </g-link>
+    </div>
 
+    <div>
+      <h1>Products</h1>
+      <g-link 
+        v-for="product in $page.allProductPost.edges"
+        :key="product.node.id" 
+        :to="product.node.path">
+          <h2>{{ product.node.title }}</h2>
+      </g-link>
+    </div>
+</Layout>
+</template>
+
+<page-query>
+  query{
+    allNewsPost{
+      edges{
+        node{
+          id
+          title
+          path
+        }
+      }
+    },
+    allProductPost{
+      edges{
+        node{
+          id
+          title
+          path
+        }
+      }
+    }
+  }
+</page-query>
+
+<script>
+.
+.
+.
+</script>
+
+<style>
+.
+.
+.
+</style>
+```
+ここでは以下のような動作を定義しています。
+
+- `<page-query>`内では、`gridsome.config.js`で定義したGraphQLデータ型を参考に、`all[型名]`という名前で指定した型の持つすべてのデータを指定します(ここでは`NewsPost`型と`ProductPost`型のデータを全て参照する`allNewsPost`と`allProductPost`を用いています)。このページでは、これらのデータを指定の書き方で参照して利用していきます。
+- g-link内では以下の操作を行っています
+ - $pageでこのページのデータを全て参照しておいて、`news in $page.allNewsPost.edges`でNewsPostのedge以下にあるデータに`news`と名付けて、v-forで繰り返し表示しています。
+ - `:key`でv-forする際の個々のファイルの識別、`:path`でブラウザ表示した際の個々のマークダウンファイルに対応したパスの受け渡しを行っています。
+ - {{ news.node.title }}``で、マークダウンファイルのフロントマターのtitle情報をデータレイヤー上から持ってきて表示しています。
+
+これらは`News`を対象としていますが、全く同様の操作を`Product`でも行えば大丈夫です。この操作をすることで、トップページに記事のタイトルが一覧として表示されます。  
+最後に、各マークダウンファイルを表示する時に利用するVueファイルを作成していきます。`./src/templates`配下に`NewsPost.vue`というVueファイルを作成します。
+
+```vue
+<template>
+  <article>
+    <h1>{{ $page.newsPost.title }}</h1>
+    <VueRemarkContent/>
+  </article>
+</template>
+
+<page-query>
+query NewsPost ($id: ID!) {
+  newsPost(id: $id) {
+    title
+    content
+  }
+}
+</page-query>
+```
+
+ここでは以下の操作を行っています。
+- 先程同様、データレイヤー上のデータから`<page-query>`内でデータを参照します。今回では、`NewsPost`型のマークダウンファイルデータのうち、`title`(記事のタイトル：フロントマター内の記述)と`content`(記事本文：フロントマターより下にある記述)を`newsPost`と名前をつけて照会しています。
+- `$page.newsPost.title`で同様に`title`データを、`<VueRemarkContent/>`で`content`データを表示します(`<VueRemarkContent/>`はプラグインで定められた記述です)。
+
+`Product`でも全く同様のことを記述していけばよいです。その際は、照会するデータ型が`NewsPost`型と`ProductPost`型で違うので、別途`ProductPost.vue`のようなVueテンプレートを作成していくと良いでしょう。
+
+## まとめ
+GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。GraphQlを除けば、Gridsomeは実質Vueみたいなものなので(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
 ## 参考
+
