Fix mastash error

--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -81,11 +81,14 @@ module.exports = {
 この`gridsome.config.js`が、Gridsomeのプロジェクトのデータ設定になるので、ここは非常に重要となります。この設定一つでデータを読み込めなかったりするので、しっかり記述します。  
 
 データの定義が完了したので、次はデータとなるマークダウンファイルを格納するディレクトリを作成します。
+
 ```
 mkdir posts/news
 mkdir posts/products
 ```
+
 2つのディレクトリの中には、以下のような形式でマークダウンファイルを作成します。両方のディレクトリにこの形式のマークダウンファイルがないとエラーを吐きますので、2つともファイルを作成しておきましょう。
+
 ```md
 ---
 title: "成功していればここにタイトルが表示されます"
@@ -96,6 +99,7 @@ title: "成功していればここにタイトルが表示されます"
 マークダウンで記事一覧を表示することかできたぞ!やったぜ!  
 テンションあがるなｧ＾〜
 ```
+
 こうしてマークダウンファイルを作成しました。これらの情報が、先程のプラグインによってGraphQLデータレイヤーにインポートされます。具体的には
 - title: マークダウンファイルで`title`を記述した部分
 - content: 記事本文
@@ -107,7 +111,8 @@ title: "成功していればここにタイトルが表示されます"
 
 ## GraphQLデータレイヤー上のデータをクエリ(照会)して、投稿一覧ページを作る
 次に各ページにGraphQLを記述して、データレイヤー上にインポートされたデータから必要なデータを問い合わせていきます。`Index.vue`に記述されているデフォルトの記事に、GraphQLの項目を追記していきます。
-```vue
+
+```Vue
 <!-- Index.vue -->
 <template>
 <Layout>
@@ -172,18 +177,19 @@ title: "成功していればここにタイトルが表示されます"
 .
 </style>
 ```
+
 ここでは以下のような動作を定義しています。
 
 - `<page-query>`内では、`gridsome.config.js`で定義したGraphQLデータ型を参考に、`all[型名]`という名前で指定した型の持つすべてのデータを指定します(ここでは`NewsPost`型と`ProductPost`型のデータを全て参照する`allNewsPost`と`allProductPost`を用いています)。このページでは、これらのデータを指定の書き方で参照して利用していきます。
 - g-link内では以下の操作を行っています
- - $pageでこのページのデータを全て参照しておいて、`news in $page.allNewsPost.edges`でNewsPostのedge以下にあるデータに`news`と名付けて、v-forで繰り返し表示しています。
- - `:key`でv-forする際の個々のファイルの識別、`:path`でブラウザ表示した際の個々のマークダウンファイルに対応したパスの受け渡しを行っています。
- - {{ news.node.title }}``で、マークダウンファイルのフロントマターのtitle情報をデータレイヤー上から持ってきて表示しています。
+- $pageでこのページのデータを全て参照しておいて、`news in $page.allNewsPost.edges`でNewsPostのedge以下にあるデータに`news`と名付けて、v-forで繰り返し表示しています。
+- `:key`でv-forする際の個々のファイルの識別、`:path`でブラウザ表示した際の個々のマークダウンファイルに対応したパスの受け渡しを行っています。
+- `news.node.title`で、マークダウンファイルのフロントマターのtitle情報をデータレイヤー上から持ってきて表示しています。
 
 これらは`News`を対象としていますが、全く同様の操作を`Product`でも行えば大丈夫です。この操作をすることで、トップページに記事のタイトルが一覧として表示されます。  
 最後に、各マークダウンファイルを表示する時に利用するVueファイルを作成していきます。`./src/templates`配下に`NewsPost.vue`というVueファイルを作成します。
 
-```vue
+```
 <template>
   <article>
     <h1>{{ $page.newsPost.title }}</h1>
@@ -209,5 +215,6 @@ query NewsPost ($id: ID!) {
 
 ## まとめ
 GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。GraphQlを除けば、Gridsomeは実質Vueみたいなものなので(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
+
 ## 参考
 
