--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -64,21 +64,21 @@ module.exports = {
     {
       use: '@gridsome/vue-remark',
       options: {
-        typeName: 'ProductPost', // 必須。GraphQL上で扱う型定義
-        baseDir: './posts/products', // 記事となるmarkdownファイルを置くディレクトリ
-        pathPrefix: '/products', // URLになるパス。必須ではない。
-        template: './src/templates/ProductPost.vue' // 記事ページのVueコンポーネントファイルの指定
+        typeName: 'ProductPost',
+        baseDir: './posts/products',
+        pathPrefix: '/products',
+        template: './src/templates/ProductPost.vue'
       }
     }  
   ]
 }
 ```
 これらの書き方は[@gridsome/vue-remarkプラグインの公式サイト](https://gridsome.org/plugins/@gridsome/vue-remark)にしっかりと載っています。ここに載っている書き方の例と比較すると、上記の記述ではいくつか異なる部分が見受けられるはずです。この部分は以下のように解説できます。
-- マークダウンファイルをデータとして利用するには、**マークダウンファイルを入れておくディレクトリがそれぞれのGraphQL上の型1つにつき1つ必要**。
-- そのために「ニュース」と「プロダクト」のそれぞれに対して、**GraphQL上の型・格納するディレクトリ・パス・テンプレートファイル**の指定を行っている。
-- 先程導入したプラグインを、「ニュース」と「プロダクト」のそれぞれに対して適用させている。
+- マークダウンファイルをデータとして利用するには、**マークダウンファイルを入れておくディレクトリ**が**それぞれのGraphQL上の型1つにつき1つ必要**。
+- `News`と`Product`のそれぞれに対して、**GraphQL上の型・格納するディレクトリ・パス・テンプレートファイル**の指定を行っている。
+- 先程導入したプラグインを、`News`と`Product`のそれぞれに対して適用させている。
 
-この`gridsome.config.js`が、Gridsomeのプロジェクトのデータ設定になるので、ここは非常に重要となります。この設定一つでデータを読み込めなかったりするので、しっかり記述します。  
+この`gridsome.config.js`が、Gridsomeのプロジェクトのデータ設定になるので、ここは非常に重要となります。この設定一つでデータを読み込めなかったりするので、しっかり記述しましょう。  
 
 データの定義が完了したので、次はデータとなるマークダウンファイルを格納するディレクトリを作成します。
 
@@ -87,7 +87,7 @@ mkdir posts/news
 mkdir posts/products
 ```
 
-2つのディレクトリの中には、以下のような形式でマークダウンファイルを作成します。両方のディレクトリにこの形式のマークダウンファイルがないとエラーを吐きますので、2つともファイルを作成しておきましょう。
+2つの`news`ディレクトリと`products`ディレクトリの中には、以下のような形式でマークダウンファイルを作成します。両方のディレクトリにこの形式のマークダウンファイルがないとエラーを吐きますので、2つともファイルを作成しておきましょう。
 
 ```md
 ---
@@ -100,17 +100,17 @@ title: "成功していればここにタイトルが表示されます"
 テンションあがるなｧ＾〜
 ```
 
-こうしてマークダウンファイルを作成しました。これらの情報が、先程のプラグインによってGraphQLデータレイヤーにインポートされます。具体的には
+こうしてマークダウンファイルを作成しました。`---`で囲まれた部分は「フロントマター」と呼ばれ、各マークダウンファイルのメタデータの定義・設定を記述できます。フロントマターを記述すると、先程のプラグインによってメタデータがGraphQLデータレイヤーにインポートされます。具体的には
 - title: マークダウンファイルで`title`を記述した部分
 - content: 記事本文
 
 の2つに加え、
 - id: 各マークダウンファイルに対応する一意の文字列
 
-の3つの情報がインポートされています。以降は、これらデータレイヤー上のデータを必要に応じてQuery:照会していきます。
+の3つの情報がインポートされています。以降は、これらデータレイヤー上のデータを必要に応じてQuery(日本語で「照会・問い合わせ」)していきます。
 
 ## GraphQLデータレイヤー上のデータをクエリ(照会)して、投稿一覧ページを作る
-次に各ページにGraphQLを記述して、データレイヤー上にインポートされたデータから必要なデータを問い合わせていきます。`Index.vue`に記述されているデフォルトの記事に、GraphQLの項目を追記していきます。
+次に各ページにGraphQLを記述して、データレイヤー上にインポートされたデータから必要なデータを照会していきます。`Index.vue`に記述されているデフォルトのコードにGraphQLのデータを照会する部分の項目を追記していきます。なお、`<script>`と`<style>`は本題から外れますし、デフォルト値のままなので割愛しています。
 
 ```Vue
 <!-- Index.vue -->
@@ -120,6 +120,7 @@ title: "成功していればここにタイトルが表示されます"
     .
     .
     .
+    <!-- 以下を記述-->
     <div>
       <h1>News</h1>
       <g-link 
@@ -142,14 +143,15 @@ title: "成功していればここにタイトルが表示されます"
 </Layout>
 </template>
 
+<!-- 以下を記述 -->
 <page-query>
   query{
     allNewsPost{
       edges{
         node{
-          id
-          title
-          path
+          id //各マークダウンファイルに対する一意の文字列
+          title //フロントマター上で記述したメタデータ
+          path //プラグインによって設定されたパス
         }
       }
     },
@@ -164,32 +166,22 @@ title: "成功していればここにタイトルが表示されます"
     }
   }
 </page-query>
-
-<script>
-.
-.
-.
-</script>
-
-<style>
-.
-.
-.
-</style>
 ```
 
-ここでは以下のような動作を定義しています。
+ここでは以下のような挙動を意図しています。
 
-- `<page-query>`内では、`gridsome.config.js`で定義したGraphQLデータ型を参考に、`all[型名]`という名前で指定した型の持つすべてのデータを指定します(ここでは`NewsPost`型と`ProductPost`型のデータを全て参照する`allNewsPost`と`allProductPost`を用いています)。このページでは、これらのデータを指定の書き方で参照して利用していきます。
-- g-link内では以下の操作を行っています
-- $pageでこのページのデータを全て参照しておいて、`news in $page.allNewsPost.edges`でNewsPostのedge以下にあるデータに`news`と名付けて、v-forで繰り返し表示しています。
-- `:key`でv-forする際の個々のファイルの識別、`:path`でブラウザ表示した際の個々のマークダウンファイルに対応したパスの受け渡しを行っています。
-- `news.node.title`で、マークダウンファイルのフロントマターのtitle情報をデータレイヤー上から持ってきて表示しています。
+- `<page-query>`内では、`gridsome.config.js`で定義したGraphQLデータ型を参考に、`all[型名]`という名前で指定した型の持つすべてのデータを指定します。今回では`NewsPost`型と`ProductPost`型のデータを全て参照する`allNewsPost`と`allProductPost`を用いています。このページでは、これらのデータを参照して利用していきます。
+- `g-link`内では以下の操作を行っています
+  - `$page`でこのページを範囲として一括で参照しておいて、`news in $page.allNewsPost.edges`で`NewsPost`型データの`edge`以下にあるデータ群に`news`と名付け、`v-for`で繰り返し表示しています。
+  - `:key`では`v-for`をかける際の個々のマークダウンファイルの識別を、`:path`ではブラウザ表示した際の個々のマークダウンファイルに対応したパスの受け渡しを行っています。
+  - `news.node.title`で、マークダウンファイルのフロントマターのtitle情報をデータレイヤー上から持ってきて表示しています。この`news`とは、先程`g-link`タグ内で`news`と名前をつけたデータ群です。
 
-これらは`News`を対象としていますが、全く同様の操作を`Product`でも行えば大丈夫です。この操作をすることで、トップページに記事のタイトルが一覧として表示されます。  
-最後に、各マークダウンファイルを表示する時に利用するVueファイルを作成していきます。`./src/templates`配下に`NewsPost.vue`というVueファイルを作成します。
+これらは`News`を対象としていますが、全く同様の操作を`Product`でも行えば大丈夫です。この操作をすることで、トップページに記事のタイトルが一覧として表示されます。
+    
+最後に、マークダウンファイルを表示する時に利用するVueファイルを作成していきます。`./src/templates`配下に`NewsPost.vue`というVueファイルを作成します。
 
-```
+```vue
+<!-- NewsPost.vue -->
 <template>
   <article>
     <h1>{{ $page.newsPost.title }}</h1>
