Start writing GraphQL section

--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -206,7 +206,8 @@ query NewsPost ($id: ID!) {
 `Product`でも全く同様のことを記述していけばよいです。その際は、照会するデータ型が`NewsPost`型と`ProductPost`型で違うので、別途`ProductPost.vue`のようなVueテンプレートを作成していくと良いでしょう。
 
 ## そもそものGraphQLの挙動
-ここでちょっとGraphQLの動作について掘り下げていきましょう。
+ここでちょっとGraphQLの動作について掘り下げていきましょう。上記の`NewsPost.vue`の`page-query`で、新たに`$id: ID!`なる記述が出てきて？となったかと思います。
+
 
 ## まとめ
 GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。GraphQlを除けば、Gridsomeは実質Vueみたいなものなので(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
