Write up GraphQL content

--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -206,7 +206,11 @@ query NewsPost ($id: ID!) {
 `Product`でも全く同様のことを記述していけばよいです。その際は、照会するデータ型が`NewsPost`型と`ProductPost`型で違うので、別途`ProductPost.vue`のようなVueテンプレートを作成していくと良いでしょう。
 
 ## そもそものGraphQLの挙動
-ここでちょっとGraphQLの動作について掘り下げていきましょう。上記の`NewsPost.vue`の`page-query`で、新たに`$id: ID!`なる記述が出てきて？となったかと思います。
+ここでちょっとGraphQLの動作について掘り下げていきましょう。上記の`NewsPost.vue`の`page-query`で、新たに`$id: ID!`なる記述が出てきて？となったかと思います。  
+この`$id: ID!`では、`ID!`型の変数`$id`を定義しています(`!`はNull許容)。以下に、どういったことをやっているのかを説明します。`NewsPost.vue`はファイル自体は1つのVueコンポーネントですが、実際に表示するマークダウンファイルは複数個あるうちの1つとなります。そしてこのコンポーネントが指定するデータも、複数あるマークダウンのうちの1つのみとなります。つまり、コンポーネントに渡されるデータIDが動的なものなります。このように対象となるデータが逐一変化する時のGraphQL上のデータは、単語の頭に`$`をつけて「変数」として宣言しなければなりません。これに注意して、`NewsPost.vue`のGraphQLを記述ひつようがあるんですね〜。  
+先の`Index.vue`が表示の対象としていたマークダウンファイルは、ディレクトリ配下に存在する「全ての」マークダウンファイルでしたので、それらが提供するデータを`all`を付けることで一括して指定していましたね。それの一個ずつバージョンと考えています(違ったら指摘ｵﾅｼｬｽ)。  
+  
+
 
 
 ## まとめ
