--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -6,13 +6,12 @@ date: 2020/09/28
 
 ## はじめに
 [Gridsome](https://gridsome.org/)は様々なデータを静的サイトとして表示することができます。今回はサークルのホームページを作成する時にハマった部分の整理も兼ねて、複数のディレクトリ配下にあるマークダウンファイルの一覧を一枚のページに表示する方法を書いていきます。
-
-## そもそも
-Gridsomeは[Gatsby](https://www.gatsbyjs.com/)に強くインスパイアされて開発された静的サイトジェネレーターです。GatsbyがReact製であるのに対し、GridsomeはVueで開発されています。仕組みとしては、CMSやマークダウンファイルのデータから、タイトル・日付・本文情報などの記事データをGraphQLで引っ張ってきて、それらをを複数のページで必要に応じて表示します。これらのデータの引っ張り方を理解することで少々複雑な挙動も可能になっていきます。
-
-## マークダウンファイルのデータをGrapgQLデータレイヤーにインポートする
-これから、「ニュース」セクションと「プロダクト」セクションの記事を別々のディレクトリでで管理しながら、一括でデータをインポートしてトップページに表示する作業を行います。
+  
+## マークダウンデータをインポートする
+「ニュース」セクションと「プロダクト」セクションの記事を別々のディレクトリでで管理しながら、一括でマークダウンデータをGraphQLデータレイヤーにインポートし、トップページに表示する作業を行います。  
+  
 まず、以下のコマンドを叩いて、手元の環境にGridsomeのDefault starterを作成します。
+
 ```sh
 $ gridsome create sample
     ❯ Clone https://github.com/gridsome/gridsome-starter-default.git 2.05s
@@ -23,7 +22,9 @@ $ gridsome create sample
     - Run gridsome develop to start local development
     - Run gridsome build to build for production
 ```
+
 おそらく、プロジェクトディレクトリ配下はこのようなファイル構造になっているはずです。
+
 ```
 .
 ├── gridsome.config.js
@@ -35,7 +36,9 @@ $ gridsome create sample
 ├── static
 └── yarn.lock
 ```
-今回はマークダウンファイルをデータに持っていきたいので、マークダウンファイルをGraphQLデータにインポートできるGridsomeプラグインを導入します。今回は`@gridsome/vue-remark`というプラグインを、以下のコマンドでぶち込みます。今回は`Yarn`を使用しています。
+
+今回はマークダウンファイルをデータに持っていきたいので、マークダウンファイルをGraphQLデータにインポートできるGridsomeプラグインを導入します。`@gridsome/vue-remark`というプラグインを、以下のコマンドでぶち込みます。今回は`Yarn`を使用しています。
+
 ```sh
 $ yarn add @gridsome/vue-remark
     yarn add v1.22.5
@@ -46,7 +49,9 @@ $ yarn add @gridsome/vue-remark
     .
     Done in 10.34s.
 ```
+
 上記のように`@gridsome/vue-remark`の導入が終わったら、`gridsome.config.js`に以下のような書き込みを行います。
+
 ```js
 //gridsome.config.js
 module.exports = {
@@ -72,6 +77,7 @@ module.exports = {
     }  
   ]
 }
+
 ```
 これらの書き方は[@gridsome/vue-remarkプラグインの公式サイト](https://gridsome.org/plugins/@gridsome/vue-remark)にしっかりと載っています。ここに載っている書き方の例と比較すると、上記の記述ではいくつか異なる部分が見受けられるはずです。この部分は以下のように解説できます。
 - マークダウンファイルをデータとして利用するには、**マークダウンファイルを入れておくディレクトリ**が**それぞれのGraphQL上の型1つにつき1つ必要**。
@@ -105,11 +111,11 @@ title: "成功していればここにタイトルが表示されます"
 - content: 記事本文
 
 の2つに加え、
-- id: 各マークダウンファイルに対応する一意の文字列
+- id: 各マークダウンファイルに紐付けられている一意の文字列
 
 の3つの情報がインポートされています。以降は、これらデータレイヤー上のデータを必要に応じてQuery(日本語で「照会・問い合わせ」)していきます。
 
-## GraphQLデータレイヤー上のデータをクエリ(照会)して、投稿一覧ページを作る
+## 投稿一覧ページを作る
 次に各ページにGraphQLを記述して、データレイヤー上にインポートされたデータから必要なデータを照会していきます。`Index.vue`に記述されているデフォルトのコードにGraphQLのデータを照会する部分の項目を追記していきます。なお、`<script>`と`<style>`は本題から外れますし、デフォルト値のままなので割愛しています。
 
 ```Vue
@@ -200,21 +206,26 @@ query NewsPost ($id: ID!) {
 ```
 
 ここでは以下の操作を行っています。
-- 先程同様、データレイヤー上のデータから`<page-query>`内でデータを参照します。今回では、`NewsPost`型のマークダウンファイルデータのうち、`title`(記事のタイトル：フロントマター内の記述)と`content`(記事本文：フロントマターより下にある記述)を`newsPost`と名前をつけて照会しています。
+- 先程同様、データレイヤー上のデータから`<page-query>`内でデータを参照します。今回では`NewsPost`型のマークダウンファイルデータのうち`newsPost`と名前をつけて`id: $id`で`id`を手がかりにすると指定し、各`id`に対応したマークダウンファイルの`title`(記事のタイトル：フロントマター内の記述)と`content`(記事本文：フロントマターより下にある記述)を照会しています。
 - `$page.newsPost.title`で同様に`title`データを、`<VueRemarkContent/>`で`content`データを表示します(`<VueRemarkContent/>`はプラグインで定められた記述です)。
-
-`Product`でも全く同様のことを記述していけばよいです。その際は、照会するデータ型が`NewsPost`型と`ProductPost`型で違うので、別途`ProductPost.vue`のようなVueテンプレートを作成していくと良いでしょう。
-
-## そもそものGraphQLの挙動
-ここでちょっとGraphQLの動作について掘り下げていきましょう。上記の`NewsPost.vue`の`page-query`で、新たに`$id: ID!`なる記述が出てきて？となったかと思います。  
-この`$id: ID!`では、`ID!`型の変数`$id`を定義しています(`!`はNull許容)。以下に、どういったことをやっているのかを説明します。`NewsPost.vue`はファイル自体は1つのVueコンポーネントですが、実際に表示するマークダウンファイルは複数個あるうちの1つとなります。そしてこのコンポーネントが指定するデータも、複数あるマークダウンのうちの1つのみとなります。つまり、コンポーネントに渡されるデータIDが動的なものなります。このように対象となるデータが逐一変化する時のGraphQL上のデータは、単語の頭に`$`をつけて「変数」として宣言しなければなりません。これに注意して、`NewsPost.vue`のGraphQLを記述ひつようがあるんですね〜。  
-先の`Index.vue`が表示の対象としていたマークダウンファイルは、ディレクトリ配下に存在する「全ての」マークダウンファイルでしたので、それらが提供するデータを`all`を付けることで一括して指定していましたね。それの一個ずつバージョンと考えています(違ったら指摘ｵﾅｼｬｽ)。  
   
+ここでちょっとGraphQLの動作について掘り下げてみましょう。上記の`NewsPost.vue`の`page-query`で、新たに`$id: ID!`なる記述が出てきたかと思います。  
+  
+[GraphQLの公式ドキュメント](https://graphql.org/learn/queries/#variables)には、このような記述がなされています。
 
+>Variables  
+>  
+>So far, we have been writing all of our arguments inside the query string. But in most applications, the arguments to fields will be dynamic: For example, there might be a dropdown that lets you select which Star Wars episode you are interested in, or a search field, or a set of filters.   
+>It wouldn't be a good idea to pass these dynamic arguments directly in the query string, because then our client-side code would need to dynamically manipulate the query string at runtime, and serialize it into a GraphQL-specific format. Instead, GraphQL has a first-class way to factor dynamic values out of the query, and pass them as a separate dictionary. These values are called variables.  
+  
+この`$id: ID!`では、`ID!`型の変数`$id`を定義しています(`!`はNull許容)。`NewsPost.vue`はファイル自体は1つのVueコンポーネントですが、実際に表示するマークダウンファイルは複数個あるうちの1つとなります。そしてこのコンポーネントが指定するGraphQL上のデータも、複数あるマークダウンのうちの1つのみとなります。つまり、コンポーネントに渡されるデータIDが動的なものなります。このように対象となるデータが逐一変化する時のGraphQL上のデータは、単語の頭に`$`をつけて「変数」として宣言しなければなりません。これに注意して、`NewsPost.vue`のGraphQLを記述する必要があるんですね〜。  
+  
+先の`Index.vue`が表示の対象としていたマークダウンファイルは、ディレクトリ配下に存在する「全ての」マークダウンファイルでしたので、それらが提供するデータを`all`を付けることで一括して指定していましたね。それの1個ずつバージョンと考えています(違ったら指摘ｵﾅｼｬｽ)。  
 
-
+`Product`でも全く同様のことを記述していけばよいです。その際は、照会するデータ型が`NewsPost`型と`ProductPost`型で違うので、別途`ProductPost.vue`のようなVueテンプレートを作成していくと良いでしょう。 
+  
 ## まとめ
-GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。GraphQlを除けば、Gridsomeは実質Vueみたいなものなので(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
+GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。というか、内容自体が実質GridsomeじゃなくてGraphQLについての記事になってしまった気がします。GraphQlを除けば、Gridsomeは実質Vueみたいなものなので(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
 
 ## 参考
 
