--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -8,8 +8,10 @@ date: 2020/09/28
 [Gridsome](https://gridsome.org/)は様々なデータを静的サイトとして表示することができます。今回はサークルのホームページを作成する時にハマった部分の整理も兼ねて、複数のディレクトリ配下にあるマークダウンファイルの一覧を一枚のページに表示する方法を書いていきます。
   
 ## マークダウンデータをインポートする
-「ニュース」セクションと「プロダクト」セクションの記事を別々のディレクトリでで管理しながら、一括でマークダウンデータをGraphQLデータレイヤーにインポートし、トップページに表示する作業を行います。  
+「ニュース」セクションと「プロダクト」セクションの記事を別々のディレクトリでで管理しながら、一括でマークダウンデータをGraphQLデータレイヤーにインポートし、トップページに表示する作業を行います。 
+
   
+### Gridsomeの導入
 まず、以下のコマンドを叩いて、手元の環境にGridsomeのDefault starterを作成します。
 
 ```sh
@@ -37,6 +39,7 @@ $ gridsome create sample
 └── yarn.lock
 ```
 
+### プラグインの導入
 今回はマークダウンファイルをデータに持っていきたいので、マークダウンファイルをGraphQLデータにインポートできるGridsomeプラグインを導入します。`@gridsome/vue-remark`というプラグインを、以下のコマンドでぶち込みます。今回は`Yarn`を使用しています。
 
 ```sh
