Add reference section

--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -6,6 +6,10 @@ date: 2020/09/28
 
 ## はじめに
 [Gridsome](https://gridsome.org/)は様々なデータを静的サイトとして表示することができます。今回はサークルのホームページを作成する時にハマった部分の整理も兼ねて、複数のディレクトリ配下にあるマークダウンファイルの一覧を一枚のページに表示する方法を書いていきます。
+
+## Gridsome概要
+Gridsomeについて超ざっくりと概要を紹介しておきましょう。  
+GridsomeはVueで作られた静的サイトジェネレータです。似たような技術でReactで作られた
   
 ## マークダウンデータをインポートする
 「ニュース」セクションと「プロダクト」セクションの記事を別々のディレクトリでで管理しながら、一括でマークダウンデータをGraphQLデータレイヤーにインポートし、トップページに表示する作業を行います。 
@@ -40,7 +44,7 @@ $ gridsome create sample
 ```
 
 ### プラグインの導入
-今回はマークダウンファイルをデータに持っていきたいので、マークダウンファイルをGraphQLデータにインポートできるGridsomeプラグインを導入します。`@gridsome/vue-remark`というプラグインを、以下のコマンドでぶち込みます。今回は`Yarn`を使用しています。
+今回はマークダウンファイルをデータに持っていきたいので、マークダウンファイルをGraphQLデータレイヤーにインポートできるGridsomeプラグインを導入します。`@gridsome/vue-remark`というプラグインを、以下のコマンドでぶち込みます。今回は`Yarn`を使用しています。
 
 ```sh
 $ yarn add @gridsome/vue-remark
@@ -231,4 +235,10 @@ query NewsPost ($id: ID!) {
 GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。というか、内容自体が実質GridsomeじゃなくてGraphQLについての記事になってしまった気がします。GraphQlを除けば、Gridsomeは実質Vueみたいなものなので(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
 
 ## 参考
-
+- [Gridsome公式サイト](https://gridsome.org/)
+- [@gridsome/vue-remark](https://gridsome.org/plugins/@gridsome/vue-remark)
+- [Queries and Mutations | GraphQL](https://graphql.org/learn/queries/)
+- [Gridsomeでイチからブログを作る - Markdownファイルで記事を作る | TRIAL AND SPIRAL](https://blog.solunita.net/posts/develop-blog-by-gridsome-from-scrach-by-markdown/)
+- [Gridsomeでブログを作る | Qiita](https://qiita.com/ririli/items/ebd57c3c993e0b8403bd)
+- [GraphQL入門 - 使いたくなるGraphQL | Qiita](https://qiita.com/bananaumai/items/3eb77a67102f53e8a1ad)
+- [Feature #23 | GitHub](https://github.com/o-xian999/oaxis/pull/23)
