Add detail description

--- a/src/posts/3.md
+++ b/src/posts/3.md
@@ -5,48 +5,33 @@ date: 2020/09/28
 # Gridsomeで複数ディレクトリから記事一覧を表示する
 
 ## はじめに
-[Gridsome](https://gridsome.org/)は様々なデータを静的サイトとして表示することができます。今回はサークルのホームページを作成する時にハマった部分の整理も兼ねて、複数のディレクトリ配下にあるマークダウンファイルの一覧を一枚のページに表示する方法を書いていきます。
+[Gridsome](https://gridsome.org/)は様々なデータを静的サイトとして表示することができます。今回はサークルのホームページを作成する時にハマった部分の整理も兼ねて、複数のディレクトリ配下にあるマークダウンファイルを一覧表示する方法を書いていきます。  
 
+::: tip 間違いとか見つけたら
+この記事に載せているのは私なりの解釈なので、なにかご指摘等ありましたら[私のGitHub](https://github.com/o-xian999/oaxis)まで連絡いただけると幸いです。
+:::
+  
 ## Gridsome概要
 Gridsomeについて超ざっくりと概要を紹介しておきましょう。  
 GridsomeはVueで作られた静的サイトジェネレータです。似たような技術でReactで作られたGatsbyがあります。静的サイトジェネレータは文字通り静的サイト(HTMLなど)の生成に特化したツールで、比較的データのやり取りが頻繁には発生しないWebサイト(ポートフォリオやブログなど)で使われることが多いです。  
-GridsomeはGatsbyにインスパイアされて開発されている技術で、その仕組みもGatsbyに似たものになっています。CMSやマークダウンファイルなどのデータをGraphQLデータレイヤーと呼ばれるツールに一時的に保存され、このデータレイヤーから最終的に静的サイトが生成されます。Gridsomeの公式サイトにも、データレイヤーに関して以下のような説明がなされています。
+GridsomeはGatsbyにインスパイアされて開発されている技術で、その仕組みもGatsbyに似たものになっています。CMSやマークダウンファイルなどのデータがGraphQLデータレイヤーと呼ばれるツールに一時的に保存され、このデータレイヤーから最終的に静的サイトが生成されます。Gridsomeの公式サイトにも、データレイヤーに関して以下のような説明がなされています。
   
 >The GraphQL data layer is a tool available in development mode. This is where all of the data imported into a Gridsome project is temporarily stored. Think of it as a local database that helps you work faster and better with your data.  
+
+![](https://gridsome.org/assets/static/import-data.eb9be63.3e0083b3c8c40a300ab593b006f88025.png)
+> 出典：[The GraphQL data layer](https://gridsome.org/docs/data-layer/)
   
 ## マークダウンデータをインポートする
-「ニュース」セクションと「プロダクト」セクションの記事を別々のディレクトリでで管理しながら、一括でマークダウンデータをGraphQLデータレイヤーにインポートし、トップページに表示する作業を行います。 
-
+2020/10/03現在の開発環境は以下の通りです。
+Tool | Details
+:---: | :---:
+Ubuntu | 20.04.1 LTS x86_64
+Node.js | v10.19.0
+Yarn | 1.22.5
+Gridsome | v0.7.0
   
-### Gridsomeの導入
-まず、以下のコマンドを叩いて、手元の環境にGridsomeのDefault starterを作成します。
-
-```sh
-$ gridsome create sample
-    ❯ Clone https://github.com/gridsome/gridsome-starter-default.git 2.05s
-    ❯ Update project package.json 0.01s
-    ❯ Install dependencies 22.03s
-
-    - Enter directory cd sample
-    - Run gridsome develop to start local development
-    - Run gridsome build to build for production
-```
-
-おそらく、プロジェクトディレクトリ配下はこのようなファイル構造になっているはずです。
-
-```
-.
-├── gridsome.config.js
-├── gridsome.server.js
-├── node_modules
-├── package.json
-├── README.md
-├── src
-├── static
-└── yarn.lock
-```
-
-### プラグインの導入
+この作業では`News`と`Products`についての記事を別々のディレクトリで管理しながら、一括でマークダウンデータをGraphQLデータレイヤーにインポートし、トップページに表示するといった作業を行います。 
+  
 今回はマークダウンファイルをデータに持っていきたいので、マークダウンファイルをGraphQLデータレイヤーにインポートできるGridsomeプラグインを導入します。`@gridsome/vue-remark`というプラグインを、以下のコマンドでぶち込みます。今回は`Yarn`を使用しています。
 
 ```sh
@@ -87,11 +72,12 @@ module.exports = {
     }  
   ]
 }
-
 ```
-これらの書き方は[@gridsome/vue-remarkプラグインの公式サイト](https://gridsome.org/plugins/@gridsome/vue-remark)にしっかりと載っています。ここに載っている書き方の例と比較すると、上記の記述ではいくつか異なる部分が見受けられるはずです。この部分は以下のように解説できます。
-- マークダウンファイルをデータとして利用するには、**マークダウンファイルを入れておくディレクトリ**が**それぞれのGraphQL上の型1つにつき1つ必要**。
-- `News`と`Product`のそれぞれに対して、**GraphQL上の型・格納するディレクトリ・パス・テンプレートファイル**の指定を行っている。
+> [Gridsomeでイチからブログを作る - Markdownファイルで記事を作る](https://blog.solunita.net/posts/develop-blog-by-gridsome-from-scrach-by-markdown/)よりコードを参照  
+  
+これらの書き方は[@gridsome/vue-remark](https://gridsome.org/plugins/@gridsome/vue-remark)にしっかりと載っています。この部分は以下のように説明することができます。
+- マークダウンファイルをデータとして利用するには、マークダウンファイルを入れておくディレクトリがそれぞれのGraphQL上の型1つにつき1つ必要。
+- `News`と`Product`のそれぞれに対して、GraphQL上の型・格納するディレクトリ・パス・テンプレートファイルの指定を行っている。
 - 先程導入したプラグインを、`News`と`Product`のそれぞれに対して適用させている。
 
 この`gridsome.config.js`が、Gridsomeのプロジェクトのデータ設定になるので、ここは非常に重要となります。この設定一つでデータを読み込めなかったりするので、しっかり記述しましょう。  
@@ -165,7 +151,7 @@ title: "成功していればここにタイトルが表示されます"
     allNewsPost{
       edges{
         node{
-          id //各マークダウンファイルに対する一意の文字列
+          id //各マークダウンファイルに対応する一意の文字列
           title //フロントマター上で記述したメタデータ
           path //プラグインによって設定されたパス
         }
@@ -214,6 +200,7 @@ query NewsPost ($id: ID!) {
 }
 </page-query>
 ```
+> [Gridsomeでイチからブログを作る - Markdownファイルで記事を作る](https://blog.solunita.net/posts/develop-blog-by-gridsome-from-scrach-by-markdown/)よりコードを参照
 
 ここでは以下の操作を行っています。
 - 先程同様、データレイヤー上のデータから`<page-query>`内でデータを参照します。今回では`NewsPost`型のマークダウンファイルデータのうち`newsPost`と名前をつけて`id: $id`で`id`を手がかりにすると指定し、各`id`に対応したマークダウンファイルの`title`(記事のタイトル：フロントマター内の記述)と`content`(記事本文：フロントマターより下にある記述)を照会しています。
@@ -221,21 +208,23 @@ query NewsPost ($id: ID!) {
   
 ここでちょっとGraphQLの動作について掘り下げてみましょう。上記の`NewsPost.vue`の`page-query`で、新たに`$id: ID!`なる記述が出てきたかと思います。  
   
-[GraphQLの公式ドキュメント](https://graphql.org/learn/queries/#variables)には、このような記述がなされています。
+GraphQLの公式ドキュメントには、このような記述がなされています。
 
 >Variables  
 >  
 >So far, we have been writing all of our arguments inside the query string. But in most applications, the arguments to fields will be dynamic: For example, there might be a dropdown that lets you select which Star Wars episode you are interested in, or a search field, or a set of filters.   
->It wouldn't be a good idea to pass these dynamic arguments directly in the query string, because then our client-side code would need to dynamically manipulate the query string at runtime, and serialize it into a GraphQL-specific format. Instead, GraphQL has a first-class way to factor dynamic values out of the query, and pass them as a separate dictionary. These values are called variables.  
+>It wouldn't be a good idea to pass these dynamic arguments directly in the query string, because then our client-side code would need to dynamically manipulate the query string at runtime, and serialize it into a GraphQL-specific format. Instead, GraphQL has a first-class way to factor dynamic values out of the query, and pass them as a separate dictionary. These values are called variables. 
+  
+>出典：[Queries and Mutations](https://graphql.org/learn/queries/#variables)  
   
 この`$id: ID!`では、`ID!`型の変数`$id`を定義しています(`!`はNull許容)。`NewsPost.vue`はファイル自体は1つのVueコンポーネントですが、実際に表示するマークダウンファイルは複数個あるうちの1つとなります。そしてこのコンポーネントが指定するGraphQL上のデータも、複数あるマークダウンのうちの1つのみとなります。つまり、コンポーネントに渡されるデータIDが動的なものなります。このように対象となるデータが逐一変化する時のGraphQL上のデータは、単語の頭に`$`をつけて「変数」として宣言しなければなりません。これに注意して、`NewsPost.vue`のGraphQLを記述する必要があるんですね〜。  
   
-先の`Index.vue`が表示の対象としていたマークダウンファイルは、ディレクトリ配下に存在する「全ての」マークダウンファイルでしたので、それらが提供するデータを`all`を付けることで一括して指定していましたね。それの1個ずつバージョンと考えています(違ったら指摘ｵﾅｼｬｽ)。  
+先の`Index.vue`が表示の対象としていたマークダウンファイルは、ディレクトリ配下に存在する「全ての」マークダウンファイルでしたので、それらが提供するデータを`all`を付けることで一括して指定していましたね。それの1個ずつバージョンと考えています。  
 
 `Product`でも全く同様のことを記述していけばよいです。その際は、照会するデータ型が`NewsPost`型と`ProductPost`型で違うので、別途`ProductPost.vue`のようなVueテンプレートを作成していくと良いでしょう。 
   
-## まとめ
-GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。というか、内容自体が実質GridsomeじゃなくてGraphQLについての記事になってしまった気がします。GraphQlを除けば、Gridsomeは実質Vueみたいなものなので(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
+## 所感
+GraphQLが具体的にどんなことをやっているのかを理解できたのはデカいと思います。というか、内容自体がGridsomeというよりGraphQLについての記事になってしまった気がします。GraphQlを除けば、Gridsomeは実質Vueみたいなものでしたね(King of 安直)。いつの日か断念していたGatsby開発も、GraphQLの挙動を理解した状態でリベンジできるんじゃねとちょっと思いますた。
 
 ## 参考
 - [Gridsome公式サイト](https://gridsome.org/)
