--- a/src/posts/4.md
+++ b/src/posts/4.md
@@ -13,14 +13,18 @@ date: 2020/10/18
 
 このハッカソンにおける制作物として、「サークルが所有している書籍の管理アプリ」を選びました。誰がどの書籍を借りているかがひと目でわかる掲示板のようなものをイメージするとわかりやすいです。じゃあ技術何使うよ、となって、最終的に以下の技術を使うに至りました。
 
-- Vue CLI(フロント)
-- Flask(バックエンド)
+- [Vue CLI](https://cli.vuejs.org/)(フロント)
+- [Flask](https://flask.palletsprojects.com/en/1.1.x/)(バックエンド)
 
-私は Vue を結構触っていたし、逆にいうと Flask をはじめとするバックエンド技術にはほとんど触れたことがなかったので、Vue 担当になりました。ここから一週間くらいかけて作品の制作にとりかかりました。
+私は Vue を結構触っていたし、逆にいうと Flask をはじめとするバックエンド技術にはほとんど触れたことがなかったので、Vue 担当になりました。私達 3 人をメンバーにし、チーム名「カーテシーコール」を引っさげて、一週間くらい作品の制作にとりかかりました。
 
 ## 得たものざっくり
 
-結果からいいますと、目指していた機能の完成には至りませんでした。というのも、僕自身 1 年の時に実家通いでサークルにほとんどコミットできていなかったということもあり、本格的なコーディングが初めてだったからです。最後の方は先輩の力も借りることになりましたが、Vue と Flask の接続という壁は越えられませんでした。ハッカソンという大会では入賞こそしませんでしたが、個人的に得たものがすごく多い結果となりました。
+結果からいいますと、目指していた機能の完成には至りませんでした。これは、未完成ではありますが Heroku にデプロイしました「BookLook」です。
+
+[BookLook](https://proken-booklook.herokuapp.com/)
+
+というのも、僕自身 1 年の時に実家通いでサークルにほとんどコミットできていなかったということもあり、本格的なコーディングが初めてだったからです。最後の方は先輩の力も借りることになりましたが、Vue と Flask の接続という壁は越えられませんでした。ハッカソンという大会では入賞こそしませんでしたが、個人的に得たものがすごく多い結果となりました。
 
 ### バックエンドざっくり分かった
 
@@ -30,6 +34,27 @@ date: 2020/10/18
 
 もう一つ、API 通信というものの「概要」が分かった気がします。なんとなく通信プロトコルの一種なんだろうなとは思っていましたが、実際に触ってみると API 通信をすること自体は結構簡単だと思いました。Vue なら、API 通信ができるようになる[axios](https://jp.vuejs.org/v2/cookbook/using-axios-to-consume-apis.html)というライブラリでちゃちゃっと実装できちゃいます。公式ドキュメントめちゃくちゃ分かりやすい。おそらく、実装に手こずったのは JavaScript のコーディング力不足だと思います。というか完成できなかった原因はそれです。Flask がデータベースから本のデータを送れているというところまでは確認できたのですが、そのデータを JS 経由でどうやって Vue に反映させるか、見当も付きませんでした。ここに、普段からコーディングをやっているかの差が出たと思っています。
 
+### 同じような活動をしている学生と交流できた
+
+同じ工房内でずっと進捗を生んでいた先輩たちの SPAJAM チームが打ち上げで先に帰っちゃいまして、ハッカソンの審査がが終わった後に、1 人工房に残ってオータムハッカソンの懇親会に出席させていただきました。
+
+<blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="ja" dir="ltr"><a href="https://twitter.com/hashtag/%E3%82%AA%E3%83%BC%E3%82%BF%E3%83%A0%E3%83%8F%E3%83%83%E3%82%AB%E3%82%BD%E3%83%B3?src=hash&amp;ref_src=twsrc%5Etfw">#オータムハッカソン</a><br>SPAJAMチームが打ち上げに行った今、夜の静寂に包まれながら、だだっ広い工房で一人静かに審査を待ってる</p>&mdash; o-xian(おっしゃん) (@osshan9) <a href="https://twitter.com/osshan9/status/1317758508222197761?ref_src=twsrc%5Etfw">October 18, 2020</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+そこではサークルのメンバーだけでなく、私と同じく大学からプログラミングを始めたような学生と交流することができました。その中にはハッカソンの優勝チームメンバーもいたりして、結構な刺激になりましたね。普段のコーディングのことから、開発バイトやっている云々の話まで、
+
 ## まとめ
 
 は　じ　め　て　の　ハ　ッ　カ　ソ　ン　という形でオータムハッカソンに出させていただきましたが、制作物を作るというプログラミング全般に関わる知見や感じ方を、今回のハッカソンで経験することができました。私の技術力が至らなかったのが致命傷でしたが、得たものの観点からいえば非常に有益な時間だったと思います。
+
+## 追記
+
+このオータムハッカソンの作業中、工房に一人の外国人が来まして、ちょっと盛り上がった話がこちら。
+
+<blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="ja" dir="ltr">い、今起こったことをありのままに話すぜ…<br>工房で <a href="https://twitter.com/hashtag/%E3%82%AA%E3%83%BC%E3%82%BF%E3%83%A0%E3%83%8F%E3%83%83%E3%82%AB%E3%82%BD%E3%83%B3?src=hash&amp;ref_src=twsrc%5Etfw">#オータムハッカソン</a> 進めてたら突然外国人がウチラのところに訪ねてきて、「充電、Battery?」って聞いてきたんだけど、<br>頑張って日本語と英語を使いながら話を聞くとどうも変圧器が必要らしいと分かって</p>&mdash; o-xian(おっしゃん) (@osshan9) <a href="https://twitter.com/osshan9/status/1317408498519429120?ref_src=twsrc%5Etfw">October 17, 2020</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="ja" dir="ltr">それ分かって皆が「すげぇ…」ってなって一瞬学部トークで盛り上がったって話。<br>ちなみにその人、そこら辺に転がってたテスターと変圧器を拾ってきて、電圧計測してから「これこれ」みたいな感じで満足気に変圧器持っていった。</p>&mdash; o-xian(おっしゃん) (@osshan9) <a href="https://twitter.com/osshan9/status/1317408501895888896?ref_src=twsrc%5Etfw">October 17, 2020</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+ナイジェリアで国家レベルの賞を受賞してたり、はるばるナイジェリアから日本に来て博士として研究に携わってたり、マジですごい人でした。自分で作ったというサイト見てみたら日本語で自身の実績(見るからに名だたる実績)を紹介するページがあって仰天したり、色々濃い 10 分間でし。ちなみに SPAJAM メンバーの何人かがその人と LINE 交換してました()
