--- a/src/posts/4.md
+++ b/src/posts/4.md
@@ -45,7 +45,7 @@ date: 2020/10/18
 
 ## まとめ
 
-は　じ　め　て　の　ハ　ッ　カ　ソ　ン　という形でオータムハッカソンに出させていただきましたが、制作物を作るというプログラミング全般に関わる知見や感じ方を、今回のハッカソンで経験することができました。私の技術力が至らなかったのが致命傷でしたが、得たものの観点からいえば非常に有益な時間だったと思います。
+開発体験という形でオータムハッカソンに出させていただきましたが、制作物を作るというプログラミング全般に関わる知見や感じ方を、今回のハッカソンで経験することができました。私の技術力が至らなかったのが致命傷でしたが、得たものの観点からいえば非常に有益な時間だったと思います。
 
 ## 追記
 
