--- a/src/posts/4.md
+++ b/src/posts/4.md
@@ -7,7 +7,7 @@ date: 2020/10/18
 
 ## はじめに
 
-10 月のある日、いつもどおりサークルで開発に取り組んでいたとき、ふと後輩が「ハッカソン出てみませんかね？」と言ってきました。そこで詳細を確認すると、サポーターズさんが主催する[オータムハッカソン](https://talent.supporterz.jp/events/673fe904-afee-4050-b649-8bf7b6d331c3/?mkt_tok=eyJpIjoiTVRSalltWmlaVEU0T0RjNCIsInQiOiI4U2Y2VER1NlwvR2RuNktjQmFXTnNkT2lxYUd6NGdlVk5YblF4YWxHRWRzbDV4SVlBbkVMWExCYzVFd3VLQVZuYUZwRXY0R0dJRmtPMk9veDgxcEpOV1BtVkRUbER5Wm1cL3JTVHBuR2plT2lkcHhsS3VsejRRZEUwWnl1SmV5ZWRXIn0%3D)が開催されるとのことで、「じゃあ出てみよう」となったわけです。最終的に私と友人と後輩の 3 人で出場しました、
+10 月のある日、いつもどおりサークルで開発に取り組んでいたとき、ふと後輩が「ハッカソン出てみませんかね？」と言ってきました。そこで詳細を確認すると、サポーターズさんが主催する[オータムハッカソン](https://talent.supporterz.jp/events/673fe904-afee-4050-b649-8bf7b6d331c3/?mkt_tok=eyJpIjoiTVRSalltWmlaVEU0T0RjNCIsInQiOiI4U2Y2VER1NlwvR2RuNktjQmFXTnNkT2lxYUd6NGdlVk5YblF4YWxHRWRzbDV4SVlBbkVMWExCYzVFd3VLQVZuYUZwRXY0R0dJRmtPMk9veDgxcEpOV1BtVkRUbER5Wm1cL3JTVHBuR2plT2lkcHhsS3VsejRRZEUwWnl1SmV5ZWRXIn0%3D)が開催されるとのことで、「じゃあ出てみよう」となったわけです。最終的に私とサークルの同級と後輩の 3 人で出場しました、
 
 ## 何を作るのか
 
@@ -30,9 +30,9 @@ date: 2020/10/18
 
 今まで目に見えるフロントばかりを触っていたので、バックエンドで具体的にどういったことをしているのかが漠然としたままでした。今回のハッカソンでは、バックエンド担当の友人に進捗やデータのやり取りを話し合う必要があり、フロントしかやってない私でもバックエンドのことを気にかけないわけにはいきませんでした。その結果、「バックエンドという部分が具体的にどういう手順で、どういったことをやっているか」というのが分かった気がします。「全体像が分かった」と言っても良いでしょう。おかげで、バックエンドにも手を出してみようかなという気持ちにもなりました。
 
-### API 通信ざっくり分かった
+### WebAPI 通信ざっくり分かった
 
-もう一つ、API 通信というものの「概要」が分かった気がします。なんとなく通信プロトコルの一種なんだろうなとは思っていましたが、実際に触ってみると API 通信をすること自体は結構簡単だと思いました。Vue なら、API 通信ができるようになる[axios](https://jp.vuejs.org/v2/cookbook/using-axios-to-consume-apis.html)というライブラリでちゃちゃっと実装できちゃいます。公式ドキュメントめちゃくちゃ分かりやすい。おそらく、実装に手こずったのは JavaScript のコーディング力不足だと思います。というか完成できなかった原因はそれです。Flask がデータベースから本のデータを送れているというところまでは確認できたのですが、そのデータを JS 経由でどうやって Vue に反映させるか、見当も付きませんでした。ここに、普段からコーディングをやっているかの差が出たと思っています。
+もう一つ、WebAPI 通信というものの「概要」が分かった気がします。なんとなくデータをやり取りする技術なんだろうなとは思っていましたが、実際に触ってみると API 通信をすること自体は結構簡単だと思いました。Vue なら、API 通信ができるようになる[axios](https://jp.vuejs.org/v2/cookbook/using-axios-to-consume-apis.html)というライブラリでちゃちゃっと実装できちゃいます。公式ドキュメントめちゃくちゃ分かりやすい。おそらく、実装に手こずったのは JavaScript のコーディング力不足だと思います。というか完成できなかった原因はそれです。Flask がデータベースから本のデータを送れているというところまでは確認できたのですが、そのデータを JS 経由でどうやって Vue に反映させるか、見当も付きませんでした。ここに、普段からコーディングをやっているかの差が出たと思っています。
 
 ### 同じような活動をしている学生と交流できた
 
